Error with modal

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
       </ion-title>
   
       <ion-buttons slot="secondary">
-        <ion-button><ion-icon name="cart"></ion-icon></ion-button>
+        <ion-button (click)="presentModal()"><ion-icon name="cart"></ion-icon></ion-button>
       </ion-buttons>
     </ion-toolbar>
   </ion-header>
@@ -57,8 +57,7 @@
           </ion-item>
                       
       </ion-list>
-  
-  
+        
     </div>
   </ion-content>
   
